<resources>
    <string name="app_name">KFC</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t Have an Account?</string>
    <string name="continue_guest">Continue as Guest</string>
    <string name="register"><u>Register Now</u></string>
    <string name="user_account">USER ACCOUNT</string>
    <string name="contact_info">CONTACT INFORMATION</string>
    <string name="login_here"><u>Login Here</u></string>
    <string name="home_page">Home</string>
    <string name="home_text">
        We provide the best deals and best fast food.
        Order Now and enjoy your meal.\n \n
        For More Deals click the button.\n

    </string>
    <string name="viiew_more">View All Deals</string>
    <string name="already_have_account">Already have an account? </string>

    <string name="store_location">Store Location  </string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us </string>
    <string name="mitao_bhook">Mitao Bhook</string>
    <string name="our_secret_recipe">Our secret recipe</string>
    <string name="privacy_policy">Pivacy Policy</string>
    <string name="terms_condition">Terms and conditions</string>

    <string name="hungry">Hungry? Add something to your bucket!!!</string>
    <string name="start_order">Start Your Order</string>
    <string name="add_to_bucket">ADD TO BUCKET</string>

    <!--Nav-->
    <string name="open_nav">open</string>
    <string name="close_nav">close</string>

    <string name="remove_bucket_item"><u>REMOVE</u></string>


    <string-array name="country">
        <item>Country</item>
        <item>Pakistan</item>
    </string-array>
    <string-array name="city">
        <item>City</item>
        <item>Rawalpindi</item>
        <item>Islamabad</item>
        <item>Karachi</item>
        <item>Abbottabad</item>
        <item>Bahawalpur</item>
    </string-array>
    <!--Menu-->
    <string-array name="menuItems">
        <item>Everyday value</item>
        <item>Make it a Meal</item>
        <item>Signature Boxes</item>
        <item>Sharing Meals</item>
        <item>Favourite Snacks</item>
        <item>Promotions </item>
    </string-array>
    <!--DB Names-->
    <string-array name="dbNames">
        <item>everyday</item>
        <item>meals</item>
        <item>box</item>
        <item>sharing</item>
        <item>snacks</item>
        <item>promotion</item>
    </string-array>
    <string name="order">ORDER</string>


</resources>